Fix flex config path

--- a/.env
+++ b/.env
@@ -15,6 +15,7 @@ MOVIES_PATH=
 # APPLICATION PATHS
 SONARR_CONFIG_PATH=
 RADARR_CONFIG_PATH=
-PLEX_CONFIG=
+PLEX_CONFIG_PATH=
 PLEX_LOGS_PATH=
 PLEXPY_CONFIG_PATH=
+
