Add transmission configuration

--- a/.env.sample
+++ b/.env.sample
@@ -13,6 +13,7 @@ SHOWS_PATH=
 MOVIES_PATH=
 
 # APPLICATION PATHS
+TRANSMISSION_CONFIG_PATH=/home/maguila/docker/transmission/config
 SONARR_CONFIG_PATH=
 RADARR_CONFIG_PATH=
 PLEX_CONFIG_PATH=
