--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,26 @@
 version: '2'
 services:
+  transmission:
+    container_name: transmission
+    image: linuxserver/transmission
+    ports:
+      - "8989:8989"
+      - "9091:9091"
+      - "51413:51413/udp"
+    environment:
+      PUID: ${PUID}
+      PGID: ${PGID}
+      TZ: ${TIMEZONE}
+    volumes:
+      -v ${TRANSMISSION_CONFIG_PATH}:/config
+      -v ${DOWNLOADS_PATH}:/downloads
+    restart: always
+
   sonarr:
     container_name: sonarr
     image: linuxserver/sonarr
+    links:
+      - transmission
     ports:
       - "8989:8989"
     environment:
@@ -18,6 +36,8 @@ services:
   radarr:
     container_name: radarr
     image: linuxserver/radarr
+    links:
+      - transmission
     ports:
       - "7878:7878"
     environment:
