Update plexo image to official image

--- a/.env.sample
+++ b/.env.sample
@@ -10,6 +10,7 @@ DOWNLOADS_PATH=
 LOCALTIME_PATH=/etc/localtime
 MEDIA_PATH=
 REMOTE_MEDIA_PATH=
+TRANSCODING_PATH=
 SHOWS_PATH=
 MOVIES_PATH=
 
@@ -22,3 +23,6 @@ PLEX_LOGS_PATH=
 PLEXPY_CONFIG_PATH=
 OMBI_CONFIG_PATH=
 
+# PLEX CONFIG
+PLEX_VERSION=   # latest, public, beta
+PLEX_CLAIM=
