Add jackets application

--- a/.env.sample
+++ b/.env.sample
@@ -22,6 +22,7 @@ PLEX_CONFIG_PATH=
 PLEX_LOGS_PATH=
 PLEXPY_CONFIG_PATH=
 OMBI_CONFIG_PATH=
+JACKETT_CONFIG_PATH=
 
 # PLEX CONFIG
 PLEX_VERSION=   # latest, public, beta
