Rename tautulli config environment variable

--- a/.env.sample
+++ b/.env.sample
@@ -19,7 +19,7 @@ TRANSMISSION_CONFIG_PATH=
 SONARR_CONFIG_PATH=
 RADARR_CONFIG_PATH=
 PLEX_CONFIG_PATH=
-PLEXPY_CONFIG_PATH=
+TAUTULLI_CONFIG_PATH=
 OMBI_CONFIG_PATH=
 JACKETT_CONFIG_PATH=
 
