--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -112,4 +112,11 @@ services:
     volumes:
       - ${LOCALTIME_PATH}:/etc/localtime:ro
       - ${OMBI_CONFIG_PATH}:/config
+
+  watchtower:
+    container_name: watchtower
+    image: v2tec/watchtower
     restart: unless-stopped
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+    command: --schedule "0 0 4 * * *" --cleanup
