--- a/.env.sample
+++ b/.env.sample
@@ -22,6 +22,8 @@ PLEX_CONFIG_PATH=
 TAUTULLI_CONFIG_PATH=
 OMBI_CONFIG_PATH=
 JACKETT_CONFIG_PATH=
+PORTAINER_DATA_PATH=
+PORTAINER_SHARED_PATH
 
 # PLEX CONFIG
 PLEX_VERSION=   # latest, public, beta
