Add env comment

--- a/.env.sample
+++ b/.env.sample
@@ -27,4 +27,4 @@ PORTAINER_SHARED_PATH
 
 # PLEX CONFIG
 PLEX_VERSION=   # latest, public, beta
-PLEX_CLAIM=
+PLEX_CLAIM=     # Get one from https://www.plex.tv/claim/
