Simplify environment variables

--- a/.env.sample
+++ b/.env.sample
@@ -6,19 +6,16 @@ PGID=999
 TIMEZONE=Europe/Madrid
 
 # COMMON PATHS
-DOWNLOADS_PATH=
 LOCALTIME_PATH=/etc/localtime
+DOWNLOADS_PATH=
 MEDIA_PATH=
-REMOTE_MEDIA_PATH=
-TRANSCODING_PATH=
-SHOWS_PATH=
-MOVIES_PATH=
 
 # APPLICATION PATHS
 TRANSMISSION_CONFIG_PATH=
 SONARR_CONFIG_PATH=
 RADARR_CONFIG_PATH=
 PLEX_CONFIG_PATH=
+PLEX_TRANSCODING_PATH=
 TAUTULLI_CONFIG_PATH=
 OMBI_CONFIG_PATH=
 JACKETT_CONFIG_PATH=
