--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -55,7 +55,7 @@ services:
     volumes:
       - ${LOCALTIME_PATH}:/etc/localtime:ro
       - ${SONARR_CONFIG_PATH}:/config
-      - ${SHOWS_PATH}:/tv
+      - ${MEDIA_PATH}:/tv
       - ${DOWNLOADS_PATH}:/downloads
 
   radarr:
@@ -73,7 +73,7 @@ services:
     volumes:
       - ${LOCALTIME_PATH}:/etc/localtime:ro
       - ${RADARR_CONFIG_PATH}:/config
-      - ${MOVIES_PATH}:/tv
+      - ${MEDIA_PATH}:/tv
       - ${DOWNLOADS_PATH}:/downloads
 
   jackett:
@@ -102,9 +102,8 @@ services:
     network_mode: host
     volumes:
       - ${PLEX_CONFIG_PATH}:/config
-      - ${TRANSCODING_PATH}:/transcode
+      - ${PLEX_TRANSCODING_PATH}:/transcode
       - ${MEDIA_PATH}:/data/media
-      - ${REMOTE_MEDIA_PATH}:/data/remote
 
   tautulli:
     container_name: tautulli
