--- a/system/.env.sample
+++ b/system/.env.sample
@@ -10,4 +10,5 @@ LOCALTIME_PATH=/etc/localtime
 
 # APPLICATION PATHS
 PORTAINER_DATA_PATH=
-PORTAINER_SHARED_PATH
+PORTAINER_SHARED_PATH=
+DDCLIENT_CONFIG_PATH=
