Add missing volumes

--- a/downloads/.env.sample
+++ b/downloads/.env.sample
@@ -12,6 +12,7 @@ MEDIA_PATH=
 
 # APPLICATION PATHS
 TRANSMISSION_CONFIG_PATH=
+TRANSMISSION_WATCH_PATH=
 SONARR_CONFIG_PATH=
 RADARR_CONFIG_PATH=
 JACKETT_CONFIG_PATH=
