--- a/media/.env.sample
+++ b/media/.env.sample
@@ -13,6 +13,7 @@ MEDIA_PATH=
 PLEX_CONFIG_PATH=
 PLEX_TRANSCODING_PATH=
 TAUTULLI_CONFIG_PATH=
+TAUTULLI_LOGS_PATH=
 OMBI_CONFIG_PATH=
 
 # PLEX CONFIG
