Use docker with the network bridge mode

--- a/media/.env.sample
+++ b/media/.env.sample
@@ -4,6 +4,7 @@
 PUID=1000
 PGID=999
 TIMEZONE=Europe/Madrid
+HOST_IP= # The ip of the docker host machine in your local network
 
 # COMMON PATHS
 LOCALTIME_PATH=/etc/localtime
