--- a/media/docker-compose.yml
+++ b/media/docker-compose.yml
@@ -5,16 +5,28 @@ services:
     container_name: plex
     image: plexinc/pms-docker:${PLEX_VERSION}
     restart: unless-stopped
+    ports:
+      - "32400:32400/tcp"
+      - "3005:3005/tcp"
+      - "8324:8324/tcp"
+      - "32469:32469/tcp"
+      - "1900:1900/udp"
+      - "32410:32410/udp"
+      - "32412:32412/udp"
+      - "32413:32413/udp"
+      - "32414:32414/udp"
     environment:
       PUID: ${PUID}
       PGID: ${PGID}
       TZ: ${TIMEZONE}
       PLEX_CLAIM: ${PLEX_CLAIM}
+      ADVERTISE_IP: "http://${HOST_IP}:32400/"
     volumes:
       - ${PLEX_CONFIG_PATH}:/config
       - ${PLEX_TRANSCODING_PATH}:/transcode
-      - ${MEDIA_PATH}:/data/media
-    network_mode: host
+      - ${MEDIA_PATH}:/data
+    networks:
+      - media-server
 
   tautulli:
     container_name: tautulli
