Use common paths for configurations and other stuff

--- a/downloads/.env.sample
+++ b/downloads/.env.sample
@@ -9,10 +9,5 @@ TIMEZONE=Europe/Madrid
 LOCALTIME_PATH=/etc/localtime
 DOWNLOADS_PATH=
 MEDIA_PATH=
-
-# APPLICATION PATHS
-TRANSMISSION_CONFIG_PATH=
-TRANSMISSION_WATCH_PATH=
-SONARR_CONFIG_PATH=
-RADARR_CONFIG_PATH=
-JACKETT_CONFIG_PATH=
+CONFIGS_PATH= # For example: /home/user/.config/docker
+LOGS_PATH= # For example: /var/log/docker
