--- a/media/.env.sample
+++ b/media/.env.sample
@@ -9,14 +9,10 @@ HOST_IP= # The ip of the docker host machine in your local network
 # COMMON PATHS
 LOCALTIME_PATH=/etc/localtime
 MEDIA_PATH=
-
-# APPLICATION PATHS
-PLEX_CONFIG_PATH=
-PLEX_TRANSCODING_PATH=
-TAUTULLI_CONFIG_PATH=
-TAUTULLI_LOGS_PATH=
-OMBI_CONFIG_PATH=
+CONFIGS_PATH= # For example: /home/user/.config/docker
+LOGS_PATH= # For example: /var/log/docker
 
 # PLEX CONFIG
+PLEX_TRANSCODING_PATH=
 PLEX_VERSION=   # latest, public, beta
 PLEX_CLAIM=     # Get one from https://www.plex.tv/claim/
