--- a/system/.env.sample
+++ b/system/.env.sample
@@ -7,7 +7,5 @@ TIMEZONE=Europe/Madrid
 
 # COMMON PATHS
 LOCALTIME_PATH=/etc/localtime
-
-# APPLICATION PATHS
-PORTAINER_DATA_PATH=
-DDCLIENT_CONFIG_PATH=
+CONFIGS_PATH= # For example: /home/user/.config/docker
+LOGS_PATH= # For example: /var/log/docker
