Add missing traefik env variables

--- a/system/.env.sample
+++ b/system/.env.sample
@@ -10,3 +10,7 @@ DOMAIN_NAME=
 LOCALTIME_PATH=/etc/localtime
 CONFIGS_PATH= # For example: /home/user/.config/docker
 LOGS_PATH= # For example: /var/log/docker
+
+# TRAEFIK CONFIGS
+CLOUDFLARE_EMAIL=
+CLOUDFLARE_API_KEY=
