--- a/media/.env.sample
+++ b/media/.env.sample
@@ -4,6 +4,8 @@
 PUID=1000
 PGID=999
 TIMEZONE=Europe/Madrid
+DOMAIN_NAME=
+HTTP_AUTH= # You can use http://www.htaccesstools.com/htpasswd-generator
 HOST_IP= # The ip of the docker host machine in your local network
 
 # COMMON PATHS
