--- a/system/.env.sample
+++ b/system/.env.sample
@@ -5,6 +5,7 @@ PUID=1000
 PGID=999
 TIMEZONE=Europe/Madrid
 DOMAIN_NAME=
+HTTP_AUTH= # You can use http://www.htaccesstools.com/htpasswd-generator
 
 # COMMON PATHS
 LOCALTIME_PATH=/etc/localtime
