--- a/system/docker-compose.yml
+++ b/system/docker-compose.yml
@@ -1,5 +1,25 @@
 version: '3.5'
 
+x-traefik-default-labels: &traefik-default-labels
+  traefik.backend: BACKEND
+  traefik.frontend.rule: "Host:SUBDOMAIN.${DOMAIN_NAME}"
+  traefik.port: PORT
+  traefik.enable: true
+  traefik.docker.network: traefik
+  traefik.frontend.headers.SSLRedirect: true
+  traefik.frontend.headers.STSSeconds: 315360000
+  traefik.frontend.headers.browserXSSFilter: true
+  traefik.frontend.headers.contentTypeNosniff: true
+  traefik.frontend.headers.forceSTSHeader: true
+  traefik.frontend.headers.SSLHost: ${DOMAIN_NAME}
+  traefik.frontend.headers.STSIncludeSubdomains: true
+  traefik.frontend.headers.STSPreload: true
+  traefik.frontend.headers.frameDeny: true
+
+x-traefik-auth-labels: &traefik-auth-labels
+  <<: *traefik-default-labels
+  traefik.frontend.auth.basic: ${HTTP_AUTH}
+
 services:
   ddclient:
     container_name: ddclient
@@ -36,15 +56,18 @@ services:
       - ${CONFIGS_PATH}/portainer:/data
     networks:
         - traefik
+    labels:
+      <<: *traefik-default-labels
+      traefik.backend: portainer
+      traefik.frontend.rule: "Host:portainer.${DOMAIN_NAME}"
+      traefik.port: 9000
 
   traefik:
     container_name: traefik
     image: traefik
     restart: unless-stopped
     domainname: ${DOMAIN_NAME}
-    networks:
-      - default
-      - traefik
+
     ports:
       - "80:80"
       - "443:443"
@@ -55,6 +78,14 @@ services:
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:ro
       - ${CONFIGS_PATH}/traefik:/etc/traefik
+    networks:
+      - default
+      - traefik
+    labels:
+      <<: *auth-labels
+      traefik.backend: traefik
+      traefik.frontend.rule: "Host:traefik.${DOMAIN_NAME}"
+      traefik.port: 8080
 
 networks:
   traefik:
