--- a/media/.env.sample
+++ b/media/.env.sample
@@ -5,16 +5,16 @@ PUID=1000
 PGID=999
 TIMEZONE=Europe/Madrid
 DOMAIN_NAME=
-HTTP_AUTH= # You can use http://www.htaccesstools.com/htpasswd-generator
-HOST_IP= # The ip of the docker host machine in your local network
+HTTP_AUTH=                      # You can use http://www.htaccesstools.com/htpasswd-generator
+HOST_IP=                        # The ip of the docker host machine in your local network
 
 # COMMON PATHS
 LOCALTIME_PATH=/etc/localtime
 MEDIA_PATH=
-CONFIGS_PATH= # For example: /home/user/.config/docker
-LOGS_PATH= # For example: /var/log/docker
+CONFIGS_PATH=                   # For example: /home/user/.config/docker
+LOGS_PATH=                      # For example: /var/log/docker
 
 # PLEX CONFIG
 PLEX_TRANSCODING_PATH=
-PLEX_VERSION=   # latest, public, beta
-PLEX_CLAIM=     # Get one from https://www.plex.tv/claim/
+PLEX_VERSION=                   # latest, public or beta
+PLEX_CLAIM=                     # Get one from https://www.plex.tv/claim/
