Rename config path variable

--- a/downloads/.env.sample
+++ b/downloads/.env.sample
@@ -11,5 +11,5 @@ HTTP_AUTH=                      # You can use http://www.htaccesstools.com/htpas
 LOCALTIME_PATH=/etc/localtime
 DOWNLOADS_PATH=
 MEDIA_PATH=
-CONFIGS_PATH=                   # For example: /home/user/.config/docker
+CONFIG_PATH=                   # For example: /home/user/.config/docker
 LOGS_PATH=                      # For example: /var/log/docker
