--- a/media/.env.sample
+++ b/media/.env.sample
@@ -11,7 +11,7 @@ HOST_IP=                        # The ip of the docker host machine in your loca
 # COMMON PATHS
 LOCALTIME_PATH=/etc/localtime
 MEDIA_PATH=
-CONFIGS_PATH=                   # For example: /home/user/.config/docker
+CONFIG_PATH=                   # For example: /home/user/.config/docker
 LOGS_PATH=                      # For example: /var/log/docker
 
 # PLEX CONFIG
