--- a/system/.env.sample
+++ b/system/.env.sample
@@ -9,7 +9,7 @@ HTTP_AUTH=                      # You can use http://www.htaccesstools.com/htpas
 
 # COMMON PATHS
 LOCALTIME_PATH=/etc/localtime
-CONFIGS_PATH=                   # For example: /home/user/.config/docker
+CONFIG_PATH=                   # For example: /home/user/.config/docker
 LOGS_PATH=                      # For example: /var/log/docker
 
 # TRAEFIK CONFIGS
