Split domain name in two variables
In case you are using a subdomain.

--- a/downloads/.env.sample
+++ b/downloads/.env.sample
@@ -4,7 +4,8 @@
 PUID=1000
 PGID=999
 TIMEZONE=Europe/Madrid
-DOMAIN_NAME=
+ROOT_DOMAIN=                    # example.com
+SERVER_DOMAIN=                  # Same as ROOT_DOMAIN, but you can add a subdomain in case you needed, subdomain.example.com
 HTTP_AUTH=                      # You can use http://www.htaccesstools.com/htpasswd-generator
 
 # COMMON PATHS
