--- a/downloads/docker-compose.yml
+++ b/downloads/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.5'
 
 x-traefik-default-labels: &traefik-default-labels
   traefik.backend: BACKEND
-  traefik.frontend.rule: "Host:SUBDOMAIN.${DOMAIN_NAME}"
+  traefik.frontend.rule: "Host:SERVICE.${SERVER_DOMAIN}"
   traefik.port: PORT
   traefik.enable: true
   traefik.docker.network: traefik
@@ -11,7 +11,7 @@ x-traefik-default-labels: &traefik-default-labels
   traefik.frontend.headers.browserXSSFilter: true
   traefik.frontend.headers.contentTypeNosniff: true
   traefik.frontend.headers.forceSTSHeader: true
-  traefik.frontend.headers.SSLHost: ${DOMAIN_NAME}
+  traefik.frontend.headers.SSLHost: ${ROOT_DOMAIN}
   traefik.frontend.headers.STSIncludeSubdomains: true
   traefik.frontend.headers.STSPreload: true
   traefik.frontend.headers.frameDeny: true
@@ -42,7 +42,7 @@ services:
     labels:
       <<: *traefik-default-labels
       traefik.backend: transmission
-      traefik.frontend.rule: "Host:transmission.${DOMAIN_NAME}"
+      traefik.frontend.rule: "Host:transmission.${SERVER_DOMAIN}"
       traefik.port: 9091
 
   sonarr:
@@ -67,7 +67,7 @@ services:
     labels:
       <<: *traefik-auth-labels
       traefik.backend: sonarr
-      traefik.frontend.rule: "Host:sonarr.${DOMAIN_NAME}"
+      traefik.frontend.rule: "Host:sonarr.${SERVER_DOMAIN}"
       traefik.port: 8989
 
   radarr:
@@ -92,7 +92,7 @@ services:
     labels:
       <<: *auth-labels
       traefik.backend: radarr
-      traefik.frontend.rule: "Host:radarr.${DOMAIN_NAME}"
+      traefik.frontend.rule: "Host:radarr.${SERVER_DOMAIN}"
       traefik.port: 8989
 
   jackett:
@@ -113,7 +113,7 @@ services:
     labels:
       <<: *auth-labels
       traefik.backend: jackett
-      traefik.frontend.rule: "Host:jackett.${DOMAIN_NAME}"
+      traefik.frontend.rule: "Host:jackett.${SERVER_DOMAIN}"
       traefik.port: 9117
 
 networks:
