--- a/system/docker-compose.yml
+++ b/system/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.5'
 
 x-traefik-default-labels: &traefik-default-labels
   traefik.backend: BACKEND
-  traefik.frontend.rule: "Host:SUBDOMAIN.${DOMAIN_NAME}"
+  traefik.frontend.rule: "Host:SERVICE.${SERVER_DOMAIN}"
   traefik.port: PORT
   traefik.enable: true
   traefik.docker.network: traefik
@@ -11,7 +11,7 @@ x-traefik-default-labels: &traefik-default-labels
   traefik.frontend.headers.browserXSSFilter: true
   traefik.frontend.headers.contentTypeNosniff: true
   traefik.frontend.headers.forceSTSHeader: true
-  traefik.frontend.headers.SSLHost: ${DOMAIN_NAME}
+  traefik.frontend.headers.SSLHost: ${ROOT_DOMAIN}
   traefik.frontend.headers.STSIncludeSubdomains: true
   traefik.frontend.headers.STSPreload: true
   traefik.frontend.headers.frameDeny: true
@@ -59,14 +59,14 @@ services:
     labels:
       <<: *traefik-default-labels
       traefik.backend: portainer
-      traefik.frontend.rule: "Host:portainer.${DOMAIN_NAME}"
+      traefik.frontend.rule: "Host:portainer.${SERVER_DOMAIN}"
       traefik.port: 9000
 
   traefik:
     container_name: traefik
     image: traefik
     restart: unless-stopped
-    domainname: ${DOMAIN_NAME}
+    domainname: ${SERVER_DOMAIN}
 
     ports:
       - "80:80"
@@ -84,7 +84,7 @@ services:
     labels:
       <<: *auth-labels
       traefik.backend: traefik
-      traefik.frontend.rule: "Host:traefik.${DOMAIN_NAME}"
+      traefik.frontend.rule: "Host:traefik.${SERVER_DOMAIN}"
       traefik.port: 8080
 
 networks:
