--- a/system/.env.example
+++ b/system/.env.example
@@ -11,6 +11,7 @@ HTTP_AUTH=                      # You can use http://www.htaccesstools.com/htpas
 # COMMON PATHS
 LOCALTIME_PATH=/etc/localtime
 CONFIG_PATH=                   # For example: /home/user/.config/docker
+DOCKER_SOCKET=                  # /var/run/docker.sock
 LOGS_PATH=                      # For example: /var/log/docker
 
 # TRAEFIK CONFIGS
