--- a/system/docker-compose.yml
+++ b/system/docker-compose.yml
@@ -37,7 +37,7 @@ services:
     image: v2tec/watchtower
     restart: unless-stopped
     volumes:
-      - /var/run/docker.sock:/var/run/docker.sock
+      - ${DOCKER_SOCKET}:/var/run/docker.sock
     command: --schedule "0 0 4 * * *" --cleanup
 
   portainer:
@@ -52,7 +52,7 @@ services:
       PGID: ${PGID}
       TZ: ${TIMEZONE}
     volumes:
-      - /var/run/docker.sock:/var/run/docker.sock
+      - ${DOCKER_SOCKET}:/var/run/docker.sock
       - ${CONFIG_PATH}/portainer:/data
     networks:
         - traefik
@@ -76,7 +76,7 @@ services:
       - CLOUDFLARE_EMAIL=${CLOUDFLARE_EMAIL}
       - CLOUDFLARE_API_KEY=${CLOUDFLARE_API_KEY}
     volumes:
-      - /var/run/docker.sock:/var/run/docker.sock:ro
+      - ${DOCKER_SOCKET}:/var/run/docker.sock:ro
       - ${CONFIG_PATH}/traefik:/etc/traefik
     networks:
       - default
