Improve env examples

--- a/downloads/.env.example
+++ b/downloads/.env.example
@@ -1,16 +1,16 @@
 # Envionment variables file, fill with your data
 
 # COMMON
-PUID=1000
-PGID=999
-TIMEZONE=Europe/Madrid
+PUID=                           # User id with permissions on volume paths in host machine, look at `cat /etc/passwd`
+PGID=                           # Group id with permissions on volume paths in host machine, look at `cat /etc/group`
+TIMEZONE=                       # Europe/Madrid
 ROOT_DOMAIN=                    # example.com
 SERVER_DOMAIN=                  # Same as ROOT_DOMAIN, but you can add a subdomain in case you needed, subdomain.example.com
 HTTP_AUTH=                      # You can use http://www.htaccesstools.com/htpasswd-generator
 
 # COMMON PATHS
-LOCALTIME_PATH=/etc/localtime
+LOCALTIME_PATH=                 # /etc/localtime
+CONFIG_PATH=                    # For example: /home/user/.config/docker
+LOGS_PATH=                      # For example: /var/log/docker
 DOWNLOADS_PATH=
 MEDIA_PATH=
-CONFIG_PATH=                   # For example: /home/user/.config/docker
-LOGS_PATH=                      # For example: /var/log/docker
