--- a/system/.env.example
+++ b/system/.env.example
@@ -1,17 +1,17 @@
 # Envionment variables file, fill with your data
 
 # COMMON
-PUID=1000
-PGID=999
-TIMEZONE=Europe/Madrid
+PUID=                           # User id with permissions on volume paths in host machine, look at `cat /etc/passwd`
+PGID=                           # Group id with permissions on volume paths in host machine, look at `cat /etc/group`
+TIMEZONE=                       # Europe/Madrid
 ROOT_DOMAIN=                    # example.com
 SERVER_DOMAIN=                  # Same as ROOT_DOMAIN, but you can add a subdomain in case you needed, subdomain.example.com
 HTTP_AUTH=                      # You can use http://www.htaccesstools.com/htpasswd-generator
 
 # COMMON PATHS
-LOCALTIME_PATH=/etc/localtime
-CONFIG_PATH=                   # For example: /home/user/.config/docker
 DOCKER_SOCKET=                  # /var/run/docker.sock
+LOCALTIME_PATH=                 # /etc/localtime
+CONFIG_PATH=                    # For example: /home/user/.config/docker
 LOGS_PATH=                      # For example: /var/log/docker
 
 # TRAEFIK CONFIGS
