Fix services with traefik auth labels

--- a/downloads/docker-compose.yml
+++ b/downloads/docker-compose.yml
@@ -90,7 +90,7 @@ services:
     networks:
       - traefik
     labels:
-      <<: *auth-labels
+      <<: *traefik-auth-labels
       traefik.backend: radarr
       traefik.frontend.rule: "Host:radarr.${SERVER_DOMAIN}"
       traefik.port: 8989
@@ -111,7 +111,7 @@ services:
     networks:
       - traefik
     labels:
-      <<: *auth-labels
+      <<: *traefik-auth-labels
       traefik.backend: jackett
       traefik.frontend.rule: "Host:jackett.${SERVER_DOMAIN}"
       traefik.port: 9117
