Join env files and use a script to load all

--- a/.env.example
+++ b/.env.example
@@ -7,9 +7,20 @@ TIMEZONE=                       # Europe/Madrid
 ROOT_DOMAIN=                    # example.com
 SERVER_DOMAIN=                  # Same as ROOT_DOMAIN, but you can add a subdomain in case you needed, subdomain.example.com
 HTTP_AUTH=                      # You can use http://www.htaccesstools.com/htpasswd-generator
+HOST_IP=                        # The ip of the docker host machine in your local network
 
 # COMMON PATHS
+DOCKER_SOCKET=                  # /var/run/docker.sock
 LOCALTIME_PATH=                 # /etc/localtime
 CONFIG_PATH=                    # For example: /home/user/.config/docker
-DOWNLOADS_PATH=
-MEDIA_PATH=
+DOWNLOADS_PATH=                 # /mnt/disk1/downloads
+MEDIA_PATH=                     # /mnt/disk1/media
+
+# PLEX CONFIG
+PLEX_TRANSCODING_PATH=
+PLEX_VERSION=                   # latest, public or beta
+PLEX_CLAIM=                     # Get one from https://www.plex.tv/claim/
+
+# TRAEFIK CONFIGS
+CLOUDFLARE_EMAIL=
+CLOUDFLARE_API_KEY=
