Split remote and local media

--- a/.env.example
+++ b/.env.example
@@ -14,7 +14,8 @@ DOCKER_SOCKET=                  # /var/run/docker.sock
 LOCALTIME_PATH=                 # /etc/localtime
 CONFIG_PATH=                    # For example: /home/user/.config/docker
 DOWNLOADS_PATH=                 # /mnt/disk1/downloads
-MEDIA_PATH=                     # /mnt/disk1/media
+LOCAL_MEDIA_PATH=               # /mnt/disk1/media
+REMOTE_MEDIA_PATH=              # /mnt/plexdrive/media
 
 # PLEX CONFIG
 PLEX_TRANSCODING_PATH=
