--- a/docker-compose.downloads.yml
+++ b/docker-compose.downloads.yml
@@ -60,8 +60,8 @@ services:
     volumes:
       - ${LOCALTIME_PATH}:/etc/localtime:ro
       - ${CONFIG_PATH}/sonarr:/config
-      - ${DOWNLOADS_PATH}:/downloads
       - ${LOCAL_MEDIA_PATH}:/tv
+      - ${DOWNLOADS_PATH}/transmission:/downloads
     networks:
       - traefik
     labels:
@@ -85,8 +85,8 @@ services:
     volumes:
       - ${LOCALTIME_PATH}:/etc/localtime:ro
       - ${CONFIG_PATH}/radarr:/config
-      - ${DOWNLOADS_PATH}:/downloads
       - ${LOCAL_MEDIA_PATH}:/movies
+      - ${DOWNLOADS_PATH}/transmission:/downloads
     networks:
       - traefik
     labels:
